kubernetes/oxus-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oxus-frontend
  namespace: agrobank
  labels:
    app.kubernetes.io/name: oxus-frontend
    app.kubernetes.io/part-of: oxus
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: oxus-frontend
  ports:
    - name: http
      port: 9090
      targetPort: http
